math filter function test cases for null value added (#2360) (#2374)
[GEOT-6079] Math filter functions are not null safe