@@ -21,8 +21,10 @@ package org.geotools.filter.function.math;
 
 import static org.geotools.filter.capability.FunctionNameImpl.parameter;
 
+import org.geotools.factory.Hints;
 import org.geotools.filter.FunctionExpressionImpl;
 import org.geotools.filter.capability.FunctionNameImpl;
+import org.geotools.util.Converters;
 import org.opengis.filter.capability.FunctionName;
 
 /** @source $URL$ */
@@ -38,16 +40,19 @@ public class FilterFunction_abs_2 extends FunctionExpressionImpl {
     }
 
     public Object evaluate(Object feature) {
-        long arg0;
 
-        try { // attempt to get value and perform conversion
-            arg0 = (getExpression(0).evaluate(feature, Long.class)).longValue();
-        } catch (Exception e) {
-            // probably a type error
+        Object arg0 = getExpression(0).evaluate(feature);
+
+        if (arg0 == null) {
+            return null;
+        }
+
+        arg0 = Converters.convert(arg0, Long.class, new Hints());
+        if (arg0 == null) {
             throw new IllegalArgumentException(
                     "Filter Function problem for function abs argument #0 - expected type long");
         }
 
-        return new Long(Math.abs(arg0));
+        return Long.valueOf(Math.abs((Long) arg0));
     }
 }
